# irails-dataextracter

./: .gitignore  Cargo.toml  LICENSE  README.md  download_irails.sh
src/: category_writer.rs  cli.rs  data_type.rs  error.rs  main.rs  utils.rs
