[package]
name = "datacleaner-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = "4.5.18"
json = "0.12.4"
log = "0.4.22"
log4rs = "1.3.0"
rayon = "1.10.0"
walkdir = "2.5.0"
